--- a/app/views/revisions/index.html.slim
+++ b/app/views/revisions/index.html.slim
@@ -5,6 +5,11 @@
         = f.submit revision.reviewed ? "Mark as new" : "Mark as reviewed"
     .rev
       = link_to(revision.name, revision.url, target: "_blank")
-      .author= revision.author
+      .tag
+        .name in
+        .value= revision.branch
+      .tag
+        .name by
+        .value= revision.author
     .message= revision.message
 
