--- a/app/views/revisions/index.html.slim
+++ b/app/views/revisions/index.html.slim
@@ -1,15 +1,2 @@
 - Revision.limit(100).order('id DESC').all.each do |revision|
-  .revision{ style="#{revision.reviewed ? 'background-color: #AFA;' : ''}" }
-    .button
-      = form_for(revision) do |f|
-        = f.submit revision.reviewed ? "Mark as new" : "Mark as reviewed"
-    .rev
-      = link_to(revision.name, revision.url, target: "_blank")
-      .tag
-        .name in
-        .value= revision.branch
-      .tag
-        .name by
-        .value= revision.author
-    .message= revision.message
-
+  = render "revision", revision: revision
