--- a/app/views/revisions/index.html.slim
+++ b/app/views/revisions/index.html.slim
@@ -1,2 +1,3 @@
 - Revision.limit(100).order('id DESC').all.each do |revision|
-  = render "revision", revision: revision
+  div id="revision_#{revision.id}"
+    = render "revision", revision: revision
