--- a/app/views/revisions/_revision.html.slim
+++ b/app/views/revisions/_revision.html.slim
@@ -1,4 +1,4 @@
-.revision{ style="#{revision.reviewed ? 'background-color: #AFA;' : ''}" id="revision_#{revision.id}" }
+.revision{ style="#{revision.reviewed ? 'background-color: #AFA;' : ''}" }
   .button
     = form_for(revision) do |f|
       = f.submit revision.reviewed ? "Mark as new" : "Mark as reviewed"
