Use a remote form and let push update the view.

--- a/app/views/revisions/_revision.html.slim
+++ b/app/views/revisions/_revision.html.slim
@@ -1,6 +1,6 @@
 .revision{ style="#{revision.reviewed ? 'background-color: #AFA;' : ''}" }
   .button
-    = form_for(revision) do |f|
+    = form_for(revision, remote: true) do |f|
       = f.submit revision.reviewed ? "Mark as new" : "Mark as reviewed"
   .rev
     = link_to(revision.name, revision.url, target: "_blank")
