Add support for optional target=_blank.

--- a/app/assets/javascripts/push.js.erb
+++ b/app/assets/javascripts/push.js.erb
@@ -19,6 +19,13 @@ ws.onmessage = function(message) {
       // Update old ones
       $("#revision_" + data.revision_id).html(data.html);
     }
+
+    // Unless ?open_in_same_page=true is set, default to opening in new page.
+    // Set client side because we need to be able to push out one version of
+    // new pages during github receive for everyone.
+    if (window.location.href.indexOf("open_in_same_page") == -1) {
+      $(".rev a").attr("target", "_blank")
+    }
   }
 };
 
