Try to unbreak link opening.
Maybe the ready isn't triggered because of issues with web sockets?

No time to debug now.

--- a/app/assets/javascripts/push.js.erb
+++ b/app/assets/javascripts/push.js.erb
@@ -44,4 +44,4 @@ reloadWhenSocketConnectionIsLost = function() {
 
 window.setInterval(reloadWhenSocketConnectionIsLost, 5000);
 
-$(document).ready(setupLinkOpening);
+setupLinkOpening();
