--- a/app/views/revisions/_revision.html.slim
+++ b/app/views/revisions/_revision.html.slim
@@ -9,6 +9,6 @@
       .value= revision.branch
     .tag
       .name by
-      .value= revision.author
+      .value.revision-author= revision.author
   .message= revision.message
 
