--- a/app/views/revisions/index.html.slim
+++ b/app/views/revisions/index.html.slim
@@ -1,3 +1,4 @@
+/ NOTE: Keep this in sync with push.js.erb.
 .revisions
   - Revision.limit(100).order('id DESC').all.each do |revision|
     div id="revision_#{revision.id}"
