--- a/app/assets/stylesheets/revisions.css.scss
+++ b/app/assets/stylesheets/revisions.css.scss
@@ -21,10 +21,10 @@
   }
 }
 
-.revision.by-me {
+.revision-wrapper.by-me {
   opacity: 0.3;
 }
 
-.revision.last-clicked {
+.revision-wrapper.last-clicked {
   font-weight: bold;
 }
