--- a/app/views/revisions/index.html.slim
+++ b/app/views/revisions/index.html.slim
@@ -1,5 +1,5 @@
 / NOTE: Keep this in sync with push.js.erb.
 .revisions
   - Revision.limit(100).order('id DESC').all.each do |revision|
-    div id="revision_#{revision.id}"
+    div.revision-wrapper id="revision_#{revision.id}"
       = render "revision", revision: revision
