--- a/app/assets/javascripts/push.js.erb
+++ b/app/assets/javascripts/push.js.erb
@@ -17,7 +17,7 @@ $(function() {
 // If ?open_in_same_page=true is set, remove target="_blank".
 var setUpLinkOpening = function() {
   if (location.search.indexOf("open_in_same_page") !== -1) {
-    $(".rev a").attr("target", "");
+    $("a[target]").attr("target", "");
   }
 };
 
