--- a/app/views/revisions/_revision.html.slim
+++ b/app/views/revisions/_revision.html.slim
@@ -2,9 +2,8 @@
   .button-wrapper
     = form_for(revision, remote: true) do |f|
       = f.submit (revision.reviewed ? "Mark as new" : "Mark as reviewed"), class: "button"
-  .message
-    = link_to(revision.url, target: "_blank") do
-      = revision.message
+  .message-summary= link_to(revision.message_summary, revision.url, target: "_blank")
+  .message-details= revision.message_details
   .rev
     = link_to(revision.short_name, revision.url, target: "_blank")
     .property
