Add some Revision methods, questionmark 'reviewed?'.

--- a/app/views/revisions/_revision.html.slim
+++ b/app/views/revisions/_revision.html.slim
@@ -1,7 +1,7 @@
 .revision class=(revision.reviewed? ? 'was-reviewed' : '') last_in_review=revision.in_review_at.to_i
   .button-wrapper
     = form_for(revision, remote: true) do |f|
-      = f.submit (revision.reviewed ? "Mark as new" : "Mark as reviewed"), class: "button"
+      = f.submit (revision.reviewed? ? "Mark as new" : "Mark as reviewed"), class: "button"
   .message-summary= link_to(revision.message_summary, revision.url, target: "_blank")
   .message-details= revision.message_details
   .rev
