--- a/app/assets/stylesheets/revisions.css.scss
+++ b/app/assets/stylesheets/revisions.css.scss
@@ -48,6 +48,15 @@ a {
     background: $blue;
   }
 
+  .gravatar {
+    $size: 36px;
+    border-radius: 4px;
+    float: left;
+    width: $size;
+    height: $size;
+    margin: 2px 8px 2px 0;
+  }
+
   .button-wrapper {
     float: right;
   }
