Oops, fix button hiding on 'my' commits.

--- a/app/assets/stylesheets/revisions.css.scss
+++ b/app/assets/stylesheets/revisions.css.scss
@@ -28,7 +28,7 @@ a {
       height: 16px;
     }
 
-    .message-details, .rev, .button-details {
+    .message-details, .rev, .button-wrapper {
       display: none;
     }
   }
