Revert "'My' revisions: full opacity."
The revisions to revision don't stand out enough, in my opinion.
Would be nice to use full opacity, but we'd need to change something
else.

This reverts commit 35f3ebff3071f84b3d884b129ec4dfb33933c29a.

--- a/app/assets/stylesheets/revisions.css.scss
+++ b/app/assets/stylesheets/revisions.css.scss
@@ -38,6 +38,7 @@ a {
 .revision-wrapper {
   &.by-me {
     @extend %small-revision;
+    opacity: 0.5;
     .button-wrapper { display: none; }
   }
 
